@@ -269,6 +269,18 @@
 			void USB_SetHIDReportItemInfo(uint8_t* ReportData, const HID_ReportItem_t* ReportItem)
 			                              ATTR_NON_NULL_PTR_ARG(1, 2);
 										  
+			/** Retrieves the size of a given HID report in bytes from it's Report ID.
+			 *
+			 *  \param[in] ParserData  Pointer to a \ref HID_ReportInfo_t instance containing the parser output
+			 *  \param[in] ReportID  Report ID of the report whose size is to be retrieved
+			 *  \param[in] ReportType  Type of the report whose size is to be determined, a valued from the
+			 *                         \ref HID_ReportItemTypes_t enum
+			 *
+			 *  \return Size of the report in bytes, or 0 if the report does not exist
+			 */
+			uint16_t USB_GetHIDReportSize(HID_ReportInfo_t* const ParserData, uint8_t ReportID,
+			                              uint8_t ReportType) ATTR_NON_NULL_PTR_ARG(1);
+
 			/** Callback routine for the HID Report Parser. This callback <b>must</b> be implemented by the user code when
 			 *  the parser is used, to determine what report IN, OUT and FEATURE item's information is stored into the user
 			 *  HID_ReportInfo_t structure. This can be used to filter only those items the application will be using, so that
